# aip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SPEC.md  build_spec.py  index.html  sitemap.xml
.github/workflows/: publish-aip-agents.yml  publish-core.yml
docs/: competitive-analysis.md  guide-delegation.md  quickstart.md
examples/a2a-multi-agent/: README.md  orchestrator.py  researcher.py  run.sh  writer.py
examples/a2a-multi-agent/agent_cards/: orchestrator.json  researcher.json  writer.json
examples/multi-agent-delegation/: README.md  orchestrator.py  tool_server.py
examples/single-agent-mcp/: README.md  client.py  server.py
guides/a2a/: index.html
guides/adk/: index.html
guides/crewai/: index.html
guides/delegation/: index.html
guides/mcp-proxy/: index.html
paper/: ARXIV-SUBMISSION.md  blog-draft.md  main.aux  main.blg  main.out  main.tex  paper.js  references.bib
paper/arxiv-submission/: main.tex
paper/benchmarks/: bench_chained.py  bench_compact.py  bench_e2e.py  bench_security.py
paper/benchmarks/results/: chained_python.json  chained_rust.json  compact_python.json  compact_rust.json  e2e.json  security.json
paper/data/: attacks.json  chain-demo.json
paper/experiments/: exp1_real_mcp.py  exp3_real_llm.py  exp4_adversarial.py
paper/experiments/results/: exp1_real_mcp.json  exp3_real_llm.json  exp4_adversarial.json
python/: pyproject.toml
python/aip_a2a/: __init__.py  agent_card.py  delegate.py  error.py  middleware.py  verify.py
python/aip_agents/: README.md  __init__.py  pyproject.toml
python/aip_agents/adapters/: __init__.py
python/aip_agents/adapters/adk/: __init__.py  plugin.py
python/aip_agents/adapters/crewai/: __init__.py  plugin.py
python/aip_agents/adapters/langchain/: __init__.py  plugin.py
python/aip_agents/core/: __init__.py  config.py  identity_manager.py  key_store.py  logger.py  token_manager.py
python/aip_agents/examples/: adk_example.py  crewai_example.py
python/aip_core/: __init__.py  crypto.py  document.py  error.py  identity.py
python/aip_mcp/: __init__.py  audit.py  cli.py  config.py  error.py  middleware.py  proxy.py
python/aip_token/: __init__.py  chained.py  claims.py  compact.py  delegation.py  error.py  policy.py
python/tests/: test_a2a_agent_card.py  test_a2a_delegate.py  test_a2a_e2e.py  test_a2a_error.py  test_a2a_middleware.py  test_a2a_verify.py  test_audit.py  test_build_spec.py  test_chained.py  test_compact.py  test_crypto.py  test_document.py  test_identity.py  test_mcp_middleware.py  test_policy.py  test_proxy.py  test_proxy_config.py
python/tests/test_aip_agents/: test_adk_adapter.py  test_config.py  test_crewai_adapter.py  test_cross_framework.py  test_identity_manager.py  test_key_store.py  test_langchain_adapter.py  test_logger.py  test_token_manager.py
quickstart/: index.html
rust/: Cargo.toml
rust/aip-core/: Cargo.toml
rust/aip-core/src/: crypto.rs  document.rs  error.rs  identity.rs  lib.rs
rust/aip-core/tests/: crypto_test.rs  document_test.rs  identity_test.rs
rust/aip-mcp/: Cargo.toml
rust/aip-mcp/src/: error.rs  middleware.rs
rust/aip-mcp/tests/: middleware_test.rs
rust/aip-token/: Cargo.toml
rust/aip-token/src/: chained.rs  claims.rs  compact.rs  delegation.rs  error.rs  lib.rs  policy.rs
rust/aip-token/tests/: chained_test.rs  compact_test.rs  policy_test.rs
site/: build_spec.py  index.html
site/css/: spec.css  style.css
site/guides/delegation/: index.html
site/guides/langchain/: index.html
site/paper/: index.html  paper.css  paper.js
site/paper/data/: attacks.json
site/security/: index.html
spec/: aip-bindings-a2a.md  aip-bindings-http.md  aip-bindings-mcp.md  aip-core.md  aip-delegation.md  aip-provenance.md  aip-tokens.md  index.html
tests/conformance/: test_chained_interop.py  test_interop.py
