[project]
name = "aip-sdk"
version = "0.1.0"
description = "Agent Identity Protocol SDK for Python"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=43.0",
    "PyJWT[crypto]>=2.9",
    "pydantic>=2.0",
    "httpx>=0.27",
    "base58>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aip_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
