[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-identity-protocol"
version = "0.1.0"
description = "Verifiable cryptographic identity and delegation for AI agents across MCP and A2A"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sunil Prakash", email = "sunil@sunilprakash.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=43.0",
    "PyJWT[crypto]>=2.9",
    "pydantic>=2.0",
    "httpx>=0.27",
    "base58>=2.1",
    "biscuit-python>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/sunilp/aip"
Documentation = "https://github.com/sunilp/aip/blob/main/docs/quickstart.md"
Repository = "https://github.com/sunilp/aip"

[tool.hatch.build.targets.wheel]
packages = ["aip_core", "aip_token", "aip_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
