[package]
name = "aip-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core types and cryptography for the Agent Identity Protocol"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
